<resources>
    <string name="app_name">AppCM</string>
    <string name="add_word">+</string>
    <string name="welcomeSignedUser">Welcome</string>
    <string name="addNoteType">Type</string>
    <string name="addNoteDescription">Description</string>
    <string name="addNoteAddress">Address</string>
    <string name="createNoteTitle">Title</string>
    <string name="buttonSave">Save</string>
    <string name="buttonEdit">Edit</string>
    <string name="buttonDelete">Delete</string>
    <string name="buttonNotesMap">Notes Map</string>
    <string name="buttonCreateNote">Create Note</string>
    <string name="buttonSeeAllNotes">See All Notes</string>
    <string name="buttonLogout">Logout</string>
    <string name="loginUsernameText">Username: </string>
    <string name="loginPasswordText">Password:</string>
    <string name="rememberCheckbox">Remember me:</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonOfflineNotes">Offline Notes</string>
    <string name="recyclerItemTitle">Title: Title</string>
    <string name="recyclerItemBody">Body: Body</string>
    <string name="recyclerItemAddress">Address: Address</string>
    <string name="recyclerItemLatitude">Latitude: 20</string>
    <string name="recyclerItemLongitude">Longitude: 20</string>
    <string name="recyclerItemType">Type: Type</string>
    <string name="recyclerItemDescription">Description: Description</string>
    <string name="menuAllNotes">All Notes</string>
    <string name="menuDeleteAllNotes">Delete All Notes</string>
    <string name="errorCreatingNote">Error creating note</string>
    <string name="noteEditedSuccessfully">Note edited successfully</string>
    <string name="noteDeletedSuccessfully">Note deleted successfully</string>
    <string name="errorEditingNote">Error editing note</string>
    <string name="errorDeletingNote">Error deleting note</string>
    <string name="loginError">Login error</string>
    <string name="notOwnedNote">You can not edit this note</string>
    <string name="editNoChangedFields">Note unchanged, some fields may be empty</string>
    <string name="deleteNoChangedFields">Note not deleted, some fields may be empty</string>
</resources>