<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/title"
        style="@style/word_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:background="@android:color/holo_orange_light"
        android:padding="10dp"
        android:text="@string/recyclerItemTitle" />

    <TextView
        android:id="@+id/body"
        style="@style/word_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:background="@android:color/holo_orange_light"
        android:padding="10dp"
        android:text="@string/recyclerItemBody" />

    <TextView
        android:id="@+id/address"
        style="@style/word_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:padding="10dp"
        android:text="@string/recyclerItemAddress" />
</LinearLayout>